# jupyter_bokeh

./: .eslintrc.js  .gitignore  .prettierignore  .prettierrc  .travis.yml  DEVGUIDE.md  LICENSE.txt  MANIFEST.in  README.md  eslint.json  install.json  jupyter_bokeh.json  jupyterlab_bokeh.json  package-lock.json  package.json  pyproject.toml  setup.py  tsconfig.json  webpack.config.js
.github/workflows/: build.yml  codeql.yml
conda.recipe/: meta.yaml
examples/: jupyter_interactors.ipynb  jupyter_sliders.ipynb  jupyter_widgets.ipynb  notebook_comms.ipynb  server_embed.ipynb  static_plot.ipynb
jupyter-config/: jupyter_bokeh.json
jupyter_bokeh/: __init__.py  _version.py  handlers.py  widgets.py
jupyter_bokeh/labextension/: __init__.py
jupyter_bokeh/nbextension/: __init__.py  index.js.LICENSE.txt
jupyter_bokeh/nbextension/static/: extension.js
jupyterlab_bokeh/: widgets.py
jupyterlab_bokeh/nbextension/: __init__.py
jupyterlab_bokeh/nbextension/static/: extension.js
scripts/: deploy.sh
src/: bokeh.d.ts  extension.ts  handler.ts  index.ts  manager.ts  metadata.d.ts  plugin.ts  renderer.ts  widgets.ts
test_cases/: jupyter_sliders.ipynb  jupyter_widgets.ipynb
